--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ target/
 .classpath
 .project
 .settings/
+*.csv
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
